# debatDsBot

./: .env.clear  Makefile  README.md  pyproject.toml
src/debatdsbot/: config.py  ds.py  main.py
